Fixes zoom problem when opening a dialog on iOS, see https://github.com/jschr/bootstrap-modal/issues/64#issuecomment-55794181

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -202,3 +202,8 @@ body.alternative
 
 .btn.restart
   +float-right
+
+
+// Fixes zoom problem when opening a dialog on iOS, see https://github.com/jschr/bootstrap-modal/issues/64#issuecomment-55794181
+.modal-open
+  overflow-y: auto
